[gd_scene load_steps=15 format=2]

[ext_resource path="res://mockup/CMCalculator - Screen 04 - Summary.png" type="Texture" id=1]
[ext_resource path="res://background/background02.png" type="Texture" id=2]
[ext_resource path="res://button/ButtonRESETnormal.png" type="Texture" id=3]
[ext_resource path="res://button/ButtonPREVnormal.png" type="Texture" id=4]
[ext_resource path="res://logo/productSmall.png" type="Texture" id=5]
[ext_resource path="res://button/ButtonRESETpressed.png" type="Texture" id=6]
[ext_resource path="res://logo/SimpleTools_logo_small.png" type="Texture" id=7]
[ext_resource path="res://fonts/MyriadPro-Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/Summary.gd" type="Script" id=10]
[ext_resource path="res://button/ButtonPREVpressed.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 34
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="Summary" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Mock-up" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="TopMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -755.0
custom_constants/margin_top = 34
custom_constants/margin_left = 21

[node name="TopControl" type="Control" parent="TopMarginContainer"]
margin_left = 21.0
margin_top = 34.0
margin_right = 600.0
margin_bottom = 269.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopMarginContainer/TopControl"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 86

[node name="TextureRect2" type="TextureRect" parent="TopMarginContainer/TopControl/HBoxContainer"]
margin_right = 275.0
margin_bottom = 235.0
texture = ExtResource( 7 )

[node name="TextureRect3" type="TextureRect" parent="TopMarginContainer/TopControl/HBoxContainer"]
margin_left = 361.0
margin_right = 558.0
margin_bottom = 235.0
texture = ExtResource( 5 )

[node name="Row2MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Row2Control" type="Control" parent="Row2MarginContainer"]
margin_right = 600.0
margin_bottom = 1024.0

[node name="MarginContainer" type="MarginContainer" parent="Row2MarginContainer/Row2Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -246.0
margin_bottom = -136.0
custom_constants/margin_top = 5
custom_constants/margin_left = 78

[node name="Label" type="Label" parent="Row2MarginContainer/Row2Control/MarginContainer"]
margin_left = 78.0
margin_top = 17.0
margin_right = 600.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0.0666667, 0.12549, 0.670588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Step 3:
Mortgage Summary"

[node name="Row3MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -112.0
margin_bottom = 279.0

[node name="Row3Control" type="Control" parent="Row3MarginContainer"]
margin_right = 600.0
margin_bottom = 391.0

[node name="GridContainer" type="GridContainer" parent="Row3MarginContainer/Row3Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -502.0
margin_top = -195.5
margin_right = -0.000366211
margin_bottom = 176.5
custom_constants/vseparation = 20

[node name="summaryHomePrice" type="Label" parent="Row3MarginContainer/Row3Control/GridContainer"]
unique_name_in_owner = true
margin_right = 306.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "House Price $"
align = 2

[node name="summaryDownPayment" type="Label" parent="Row3MarginContainer/Row3Control/GridContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 306.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Down Payment $"
align = 2

[node name="summaryInterestRate" type="Label" parent="Row3MarginContainer/Row3Control/GridContainer"]
unique_name_in_owner = true
margin_top = 112.0
margin_right = 306.0
margin_bottom = 148.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Interest Rate %"
align = 2

[node name="summaryMortgageAmount" type="Label" parent="Row3MarginContainer/Row3Control/GridContainer"]
unique_name_in_owner = true
margin_top = 168.0
margin_right = 306.0
margin_bottom = 204.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Mortgage Amount $"
align = 2

[node name="summaryMortgageTerm" type="Label" parent="Row3MarginContainer/Row3Control/GridContainer"]
unique_name_in_owner = true
margin_top = 224.0
margin_right = 306.0
margin_bottom = 260.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Mortgage Term (yrs)"
align = 2

[node name="summaryAmortizationPeriod" type="Label" parent="Row3MarginContainer/Row3Control/GridContainer"]
unique_name_in_owner = true
margin_top = 280.0
margin_right = 306.0
margin_bottom = 316.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Amortization Period"
align = 2

[node name="summaryCMHCPremium" type="Label" parent="Row3MarginContainer/Row3Control/GridContainer"]
unique_name_in_owner = true
margin_top = 336.0
margin_right = 306.0
margin_bottom = 372.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "CMHC Premium $"
align = 2

[node name="Row4MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 826.0
margin_bottom = -147.0
custom_constants/margin_top = 4
custom_constants/margin_left = 92

[node name="Row4Control" type="Control" parent="Row4MarginContainer"]
margin_left = 92.0
margin_top = 4.0
margin_right = 600.0
margin_bottom = 51.0

[node name="HBoxContainer" type="HBoxContainer" parent="Row4MarginContainer/Row4Control"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 35

[node name="summaryMonthlyPayments" type="Label" parent="Row4MarginContainer/Row4Control/HBoxContainer"]
unique_name_in_owner = true
margin_top = 2.0
margin_right = 308.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Monthly Payments $"
align = 2

[node name="BottomMarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -299.5
margin_top = -133.0
margin_right = 299.5
custom_constants/margin_right = -49
custom_constants/margin_bottom = 24

[node name="BottomControl" type="Control" parent="BottomMarginContainer"]
margin_right = 648.0
margin_bottom = 109.0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomMarginContainer/BottomControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -306.5
margin_top = -104.0
margin_right = 67.5
custom_constants/separation = 2

[node name="summaryReset" type="TextureButton" parent="BottomMarginContainer/BottomControl/HBoxContainer"]
margin_right = 186.0
margin_bottom = 104.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="summaryPrevious" type="TextureButton" parent="BottomMarginContainer/BottomControl/HBoxContainer"]
margin_left = 188.0
margin_right = 374.0
margin_bottom = 104.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 11 )

[connection signal="pressed" from="BottomMarginContainer/BottomControl/HBoxContainer/summaryReset" to="." method="reset_all"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/HBoxContainer/summaryPrevious" to="." method="goto_previous"]
